--- a/about.html
+++ b/about.html
@@ -771,30 +771,30 @@
                             <div class="slide-wrap">
                                 <section class="slider">
                                     <ul class="slider1">
-                                        <li><img src="../orris0/bda-1.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-2.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-3.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-4.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-5.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-6.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-7.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-8.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-9.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-10.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-11.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-12.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-13.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-2.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-3.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-4.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-1.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-2.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-3.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-4.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-5.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-6.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../orris0/bda-cover-7.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-1.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-2.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-3.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-4.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-5.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-6.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-7.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-8.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-9.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-10.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-11.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-12.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-13.jpg" width="715px" height="445px"></li>
+                                        <li><img src="../bda-2.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-3.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-4.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-1.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-2.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-3.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-4.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-5.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-6.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-cover-7.jpg" width="715px" height="445px"></li>
                                     </ul>
                                 </section>
                             </div>
