--- a/about.html
+++ b/about.html
@@ -784,7 +784,24 @@
                                         <li><img src="./bda-11.jpg" width="715px" height="445px"></li>
                                         <li><img src="./bda-12.jpg" width="715px" height="445px"></li>
                                         <li><img src="./bda-13.jpg" width="715px" height="445px"></li>
-                                        <li><img src="../bda-2.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-14.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-15.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-16.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-17.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-18.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-19.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-20.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-21.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-22.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-23.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-24.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-25.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-26.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-27.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-28.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-29.jpg" width="715px" height="445px"></li>
+										<li><img src="./bda-30.jpg" width="715px" height="445px"></li>
+                                        <li><img src="./bda-2.jpg" width="715px" height="445px"></li>
                                         <li><img src="./bda-3.jpg" width="715px" height="445px"></li>
                                         <li><img src="./bda-4.jpg" width="715px" height="445px"></li>
                                         <li><img src="./bda-cover.jpg" width="715px" height="445px"></li>
