--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta charset=utf-8>
-		<base href="https://orris0.github.io/orris0/index.html" >
+		<base href="https://orris0.github.io/orris0/index.html">
 		<link rel="apple-touch-icon" href="graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -25,8 +25,8 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-        <!--  <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-         Viewport for responsive web design -->
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+         <!--Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8" />
