--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta charset=utf-8>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="./js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
 		<base href="https://orris0.github.io/orris0/index.html">
 		<link rel="apple-touch-icon" href="graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
