--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
-        <meta charset=utf-8>
+        <meta charset="utf-8">
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -14,13 +14,8 @@
 		<base href="https://orris0.github.io/orris0/index.html">
 		<link rel="apple-touch-icon" href="graphics/icon.png">
 	    <meta name="apple-mobile-web-app-capable" content="yes">
-
 	    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=0">
-
-	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-	    <link rel=stylesheet href="./CSS/style.css">
-
-	    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	    <script src="./js/scripts.js"></script>
 	    <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +28,8 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
+	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+	    <link rel=stylesheet href="./CSS/style.css">
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
          <!--Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
