--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -90,8 +90,10 @@
     </head>
     <body>
         <header>
+            <hgroup>
             <h1>Welcome to the Future World of HTML5</h1>
             <h2>Don't be scared it isn't that hard!</h2>
+            </hgroup>
         </header>
 		<!-- assume chapter 1 before -->
         <section id="chapter2">
