--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</header>
 		
 		        <!--
-                <div id="content">
+                <div data-role="content" class="data" id="html5-ch1-7content">
                 <b>This is the home page</b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                 </div></div>
@@ -157,7 +157,7 @@
                         <li><a href="page5.html">Page Five</a></li>
                     </ul>
                 </nav>				
-                <div data-role="content" class="data" id="html5-ch1-7content">
+                <!-- <div data-role="content" class="data" id="html5-ch1-7content"> -->
                     <div class="row">
                         <div class="col-12">
                             <nav role="navigation" class="data" id="nav">
