--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
-						<h2 class="heading"> Practical HTML5 Projects for fun and Profit!</h2>
+						<h2 class="heading">Welcome to <strong>StarTrackr!</strong></h2>
 					</hgroup>
 				</header>
 		
-		        <!--
+		        
                 <div data-role="content" class="data" id="html5-ch1-7content">
                 <b>This is the home page</b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-                </div></div>
+                
 		        -->
                 <nav>
                     <ul>
@@ -179,7 +179,7 @@
 		            <div class="row">
                         <div class="çol-12" padding="2%">
 				            <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
+                                <h2 class="dark" id="html5-ch1-7h2"> Practical HTML5 Projects for fun and Profit!</strong> </h2>
 				            </div>    
                         </div><!-- end-col-12 -->
                     </div><!-- end-row --
