--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	    <link rel=stylesheet href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
 	    <link rel=stylesheet href="./CSS/style.css">
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+		<link rel=stylesheet href="./CSS/squaretabs.css">
          <!--Viewport for responsive web design -->
 	    <!-- <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
