--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		
 		        
                 <div data-role="content" class="data" id="html5-ch1-7content">
-                <b>This is the home page</b>
+                <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                 
                 <nav>
