--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
         <meta charset="utf-8">
+		<!-- Viewport for responsive web design -->
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
