--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
                 <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                 
-                <nav>
+                <div id="hnav">
                     <ul>
-                        <li><a class="active" href="index.html">Home Page</a></li>
-                        <li><a href="page2.html">Page Two</a></li>
+                        <li><a href="index.html">Home Page</a></li>
+                        <li><a class="active" href="page2.html">Page Two</a></li>
                         <li><a href="page3.html">Page Three with a long label</a></li>
                         <li><a href="page4.html">Page Four</a></li>
                         <li><a href="page5.html">Page Five</a></li>
                     </ul>
-                </nav>				
+                </div>				
                 <!-- <div data-role="content" class="data" id="html5-ch1-7content"> -->
                     <div class="row">
                         <div class="col-12">
