--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 		
 		        
                 
-                <div id="hnav">
+                <div id="nav">
                     <ul>
                         <li><a href="index.html">Home Page</a></li>
                         <li><a class="active" href="page2.html">Page Two</a></li>
