--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
+								<li><a href="./creating-a-website.html">Products</a></li>
                             </ul>
                         </nav>
 				    </div><!-- end-col-12 -->
