--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<!-- -->
 		<script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<!-- -->
-		<script type="text/javascript" src="./js/scripts.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
 		<!-- -->
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 		<!-- -->
