--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -3,14 +3,14 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>HTML5 expanded section example</title>
+    
 		 <!-- meta details go here -->
         <title>Test page-HTML5 expanded section example-ch1-7</title>
-		<meta charset=utf-8>
+		<meta charset="utf-8">
 		<base href="http://htmlref.com/basexeample">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./script.js"></script> 
+        <script type="text/javascript" src="js/scripts.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 		<link rel="stylesheet" href="./bio.css" type="text/css" media="screen" charset="utf-8" />
