--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -7,7 +7,7 @@
 		 <!-- meta details go here -->
         <title>Test page-HTML5 expanded section example-ch1-7</title>
 		<meta charset="utf-8">
-		<base href="http://htmlref.com/basexeample">
+		<base href="https://orris0.github.io/orris0/index.html">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
