--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <title>SEO Specialist-Eldrige Smith</title>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<base href="https://orris0.github.io/orris0/index.html">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
