--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -6,19 +6,44 @@
     
 		 <!-- meta details go here -->
         <title>Test page-HTML5 expanded section example-ch1-7</title>
-		<meta charset="utf-8">
-		<base href="https://orris0.github.io/orris0/index.html">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset=utf-8>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-        <meta property="og:title" content="A Basic HTML5 Template">
+	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-		
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+        <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+        <!-- Viewport for responsive web design -->
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	    <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="./style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	    <link rel="stylesheet" href="./nav[1].css">
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
+        <!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+        <!-- Viewport for responsive web design -->	
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
