--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
                 <img title="Devon countryside" alt="Devon countryside" src="../bda-1.jpg" height="229" width="398">
             </div>
             <br class="clear">
-        </div><!-- content section closed -->
+        </div><!-- content section closed --
 
-<div id=footer"> changed to <footer>-->
+<div id=footer"> changed to <footer>--
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
