--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
-						<h2 class="heading">Welcome to <strong>StarTrackr!</strong></h2>
+						<h2 class="heading"><strong>StarTrackr!</strong></h2>
 					</hgroup>
 				</header>
 		
