--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		            <div class="row">
                         <div class="çol-12" padding="2%">
 				            <div id="banner-wrapper">
-                                <h2 class="dark" id="html5-ch1-7h2"> Practical HTML5 Projects for fun and Profit!</strong> </h2>
+                                <h2 class="dark" id="html5-ch1-7h2"> Practical HTML5 Projects for fun and Profit!</h2>
 				            </div>    
                         </div><!-- end-col-12 -->
                     </div><!-- end-row --
