--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -62,7 +62,7 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Creating-a-website</a></li>
+								<li><a href="./creating-a-website.html">Create-a-website</a></li>
                             </ul>
                         </nav>
 					    <img class="logo" src="img/flexy-logo.png">
@@ -1228,6 +1228,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
