--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Products</a></li>
+								<li><a href="./creating-a-website.html">Create-a-website</a></li>
                             </ul>
                         </nav>
 						<img class="logo" src="img/flexy-logo.png">
