--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                         <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
                         <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                 
-	            
+	            <!--
 		            <div class="row">
                         <div class="çol-12" padding="2%">
 				            <div id="banner-wrapper">
                                 <h2 class="dark" id="html5-ch1-7h2"> Practical HTML5 Projects for fun and Profit!</h2>
 				            </div>    
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-row --
+                        </div><!-- end-col-12 --
+                    </div><!-- end-row -->
 		
                     <div class="row">
                         <div class="çol-12">
