--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				-->
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
-						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
+						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
 						<h2 class="heading"><strong>StarTrackr!</strong></h2>
 					</hgroup>
 				</header>
