--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <div id="banner">
                                 <div id="banner-wrapper">
                                     <h2 class="dark" id="html5-ch1-7h2"> </h2> 
-							        <p id="no-script">We recommend that you have JavaScript enabled!</p> 
+							        <!-- <p id="no-script">>Award winning accommodation, self catering or bed and breakfast</p> --> 
                                 </div>
 					        </div>
 				        </div>
