--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -68,12 +68,20 @@
     </head>
     <body>
 		<div class="data" id="wrapper">
+			<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				<hgroup>  
+					<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
+					<h2 class="heading"><strong>StarTrackr!</strong></h2>
+				</hgroup>
+			</header>
+			<!--
             <header>
                 <hgroup>
                     <h1>Welcome to the Future World of HTML5</h1>
                     <h2>Don't be scared it isn't that hard!</h2>
                 </hgroup>
         </header>
+			-->
 		<!-- assume chapter 1 before -->
         <section id="chapter2">
             <header>
