--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -68,6 +68,27 @@
     </head>
     <body>
 		<div class="data" id="wrapper">
+		<!-- <div class="wrapper"> -->
+			<div id="container">
+				<div class="row">
+                    <div class="col-12">
+                        <nav role="navigation" class="data" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./membership.html">Membership</a></li>
+                                <li><a href="./news.html">News</a></li>
+                                <li><a href="./starter-page.html">Specials</a></li>
+					            <li><a href="./index[1].html">Blog</a></li>
+					            <li><a href="./index2.html">Products</a></li>
+								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+                            </ul>
+                        </nav>
+						<img class="logo" src="img/flexy-logo.png">
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
 			<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				<hgroup>  
 					<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
@@ -421,15 +442,6 @@
                     <p>&copy; Kite-It.</p>
                 </div>
             </div>               
-        </div><!-- end wrapper -->
-    </body><!-- end body  -->   
-</html>
-
-
-
-	
-	<body>
-        <div class="wrapper">
 			
 			<img class="logo" src="img/flexy-logo.png">
 			
@@ -748,7 +760,8 @@
                 <li><a href="#"><i class="instagram"></i></i></a></li>
               </ul>
               <p> &copy; Copyright 2025 MJ&#39;s Practical HTML5 Project&#39;s for Fun<span class="amp">&amp;</span>Profit - Productions</p>
-        </div>
+        </div><!-- end-footer -->
+		</div><!-- end-container -->
 
         <!-- document ready -->
         <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
