--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -100,7 +100,7 @@
 				    </hgroup>
 			    </header>
 				<!--close top section - content area starts -->
-<div class="data" id="content">
+<div class="data" id="html5-ch1-7content">
 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
 <div id="leftcol">
 <h3>Cottages, converted barns, caravans</h3>
