--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -100,8 +100,8 @@
 				    </hgroup>
 			    </header>
 				<!--close top section - content area starts -->
-<div class="data" id="html5-ch1-7content">
-<h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                <div class="data" id="html5-ch1-7content">
+                    <h2>Award winning accommodation, self catering or bed and breakfast</h2>
 <div id="leftcol">
 <h3>Cottages, converted barns, caravans</h3>
 <img alt="Cottage interior" title="Cottage interior" height="225"
@@ -294,32 +294,30 @@ height="229" width="398">
 
                 <div class="row" style="background-color: #e5ef3f;">
                     <div class="col-9">
-                        <h2>Above the clouds &amp; over the sea.</h2>
-                        <div>
-                            <h2 class="heading">Our Celebrities</h2>
-                            <p class="info">
+                        <h2 class="heading">Our Celebrities! Above the clouds &amp; over the sea.</h2>
+                        <p class="info">
                                 We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
                                 the little critters to realise they've been tagged - so you have to be fast!
-                            </p>
-                            <table class="data" id="celebs">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Name</th>
-                                        <th>Occupation</th>
-                                        <th>Approx. Location</th>
-                                        <th>Price</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>203A</td>
-                                        <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
-                                        <td>Front-man</td>
-                                        <td>Los Angeles</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                    <tr>
+                        </p>
+                        <table class="data" id="celebs">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Occupation</th>
+                                    <th>Approx. Location</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>203A</td>
+                                    <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                                    <td>Front-man</td>
+                                    <td>Los Angeles</td>
+                                    <td>$39.95</td>
+                                </tr>
+                                <tr>
                                         <td>141B</td>
                                         <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
                                         <td>Singer</td>
@@ -366,12 +364,10 @@ height="229" width="398">
                 <div class="row" style="background-color: #34495e;">
                     <div class="col-8">
                         <h2>In just 42 hours and 27 minutes</h2>
-
-                        </div>
-                    </div><!-- end col-8 -->
-                    <div class="col-3">
-                        <img id="paper-blue" class="circle" src="images/paper-blue.png">
-                    </div><!-- end col-3 -->
+                        <div class="col-3">
+                            <img id="paper-blue" class="circle" src="images/paper-blue.png">
+                        </div><!-- end col-3 -->
+				    </div><!-- end col-8 -->
                 </div><!-- en.row -->
 
                 <div class="row" style="background-color: #00afe1;">
@@ -478,7 +474,7 @@ height="229" width="398">
                     </nav>
                 </div><!-- col-12 -->
             </div><!-- end-.row -->
-            <div class="data" id="html5-ch1-7content">
+            
 				<div class="row">
                     <div class="çol-12">
                         <img src="img/kite.png">
