--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
+						<label for="Startrackr">Downloading progress:</label>
+                        <progress id="index.html" value="32" max="100"> 32% </progress>
 						<h2 class="heading"><strong>StarTrackr!</strong></h2>
 					</hgroup>
 				</header>
