--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </head>
     <body>
 		<div class="wrapper">
+			<progress id="progress" max="100" value=""></progress>
 			<div id="container">
 				<div class="row">
                     <div class="col-12">
