--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
         <!-- Font Awesome Icons -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-        <!-- Google Fonts -->
+       <style>
+
+progress{
+  width: 600px;
+}
+	   </style>
+		<!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <!-- Plugin CSS -->
