--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ progress{
     <body>
 		<div class="wrapper">
 			<progress id="progress" max="100" value=""></progress>
-			<div id="container">
+			<div class="data" id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
