--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@
                          <div class="çol-12">
                             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
 
-                            <div class="data" id="html5style2leftcol">
+                            <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="../images/clear-view-suites-villas (3).jpg" width="300">The superb interior of one of our cottages
                             </div>
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                            <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
                                     <li class="btn"><a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -116,7 +116,7 @@
                                 </ul><!--end of menu list-->
                             </nav><!--</div> removed and replaced with </nav>-->
         
-                            <div class="data" id="html5style2midcol">
+                            <div class="data" id="html5-ch1-7midcol">
                                 <h3>Situated in the UK's beautiful Devon countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="../bda-1.jpg" height="229" width="398">
                             </div>
