--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 
                             <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="../images/clear-view-suites-villas (3).jpg" width="300">The superb interior of one of our cottages
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/clear-view-suites-villas (3).jpg" width="300">The superb interior of one of our cottages
                             </div>
                             <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -118,7 +118,7 @@
         
                             <div class="data" id="html5-ch1-7midcol">
                                 <h3>Situated in the UK's beautiful Devon countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="../bda-1.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="bda-1.jpg" height="229" width="398">
                             </div>
                             <br class="clear">
 					    </div>
