--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@ progress{
         <script type="text/javascript" src="js/script.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>  
-        <!--Add conditional Javascript-->		
+        
+		<!--Add conditional Javascript-->
+
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+
+		
         <!--[if lte IE 8]>
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
