--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ progress{
         
 		<!--Add conditional Javascript-->
 
-		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+		<script src=”jquery-1.12.0.min.js”></script>
+		
 
 		
         <!--[if lte IE 8]>
