--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ progress{
 		<!--Add conditional Javascript-->
 
 		<script src=”jquery-1.12.0.min.js”></script>
+		<script src=”jquery-1.7.1.min.js”></script>
+		<script src=”jquery-ui-1.8.17.custom.min.js”></script>
+		<script src=”jquery.color.js”></script>
 		
 
 		
