--- a/about.html
+++ b/about.html
@@ -67,14 +67,47 @@
 
     <body>
         <div class="wrapper">
-			<div id="container">
-		        <img class="logo" src="img/flexy-logo.png">
-			
-			    <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
+			<progress id="progress" max="100" value=""></progress>
+			<div class="data" id="container">
+				<div class="row">
                     <div class="col-12">
-				        <h1 id="html5-ch1-7h1">Tourorris's Rural Retreats!</h1>
-                    </div><!-- end-col-12 -->	
-                </header>
+                        <nav role="navigation" class="data" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./membership.html">Membership</a></li>
+                                <li><a href="./news.html">News</a></li>
+                                <li><a href="./starter-page.html">Specials</a></li>
+					            <li><a href="./index[1].html">Blog</a></li>
+					            <li><a href="./index2.html">Products</a></li>
+								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+                            </ul>
+                        </nav>
+						<img class="logo" src="img/flexy-logo.png">
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				<!--
+				<article>
+<hgroup>
+<h1>I put our holiday dates and address on a social network</h1>
+<h2>An idiot’s tale</h2>
+</hgroup>
+<p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+<br>Loopy Lou</p>
+</article
+				-->
+				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				    <hgroup>  
+						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
+						<!--
+						<label for="./index.html">Downloading progress:</label>
+                        <progress id="./index.html" value="32" max="100"> 32% </progress>
+						-->
+						<h2 class="heading"><strong>StarTrackr!</strong></h2>
+					</hgroup>
+				</header>
 			
 		        <div class="data" id="html5-ch1-7content">
 				
