--- a/membership.html
+++ b/membership.html
@@ -68,8 +68,9 @@
     </head>
 	<body>	
         <div class="wrapper">
-			<div id="container">
-			    <div class="row">
+			<progress id="progress" max="100" value=""></progress>
+			<div class="data" id="container">
+				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
                             <input class="trigger" type="checkbox" id="mainNavButton">
@@ -88,19 +89,23 @@
 						<img class="logo" src="img/flexy-logo.png">
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				    <!--
-				    <article>
-                    <hgroup>
-                    <h1>I put our holiday dates and address on a social network</h1>
-                    <h2>An idiot’s tale</h2>
-                    </hgroup>
-                    <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                    <br>Loopy Lou</p>
-                    </article
-				    -->
+				<!--
+				<article>
+<hgroup>
+<h1>I put our holiday dates and address on a social network</h1>
+<h2>An idiot’s tale</h2>
+</hgroup>
+<p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+<br>Loopy Lou</p>
+</article
+				-->
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
+						<!--
+						<label for="./index.html">Downloading progress:</label>
+                        <progress id="./index.html" value="32" max="100"> 32% </progress>
+						-->
 						<h2 class="heading"><strong>StarTrackr!</strong></h2>
 					</hgroup>
 				</header>
