--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
+
+
+		<link rel="stylesheet" href="../../css/base.css" media="screen">	
+        <link rel="stylesheet" href="navigation.css" media="screen">
+        <script src="../../lib/jquery-1.7.1.min.js"></script>
+        <script src="jquery.easing.1.3.js"></script>
+        <script src="script.js"></script>
+
+
+
+
+		
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="style.css"> 
