--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -83,6 +83,8 @@
 						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
 						<h2 class="heading"><strong>StarTrackr!</strong></h2>
 					</hgroup>
+					<p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                     <br>Orris</p>
 				</header>
                 <br class="clear">
                 <!--
@@ -1228,6 +1230,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
