--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -78,15 +78,19 @@
                      <br>Loopy Orris</p>
                     </article
 				-->
-				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-				    <hgroup>  
-						<h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
-						<h2 class="heading"><strong>StarTrackr!</strong></h2>
-					</hgroup>
-					<p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
-                     <br>Orris</p>
-				</header>
-                <br class="clear">
+				<div class="row">
+                    <div class="col-12">
+				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				            <hgroup>  
+						        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
+						        <h2 class="heading"><strong>StarTrackr!</strong></h2>
+					        </hgroup>
+					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
+                            <br>Orris</p>
+				        </header>
+					</div><!-- end-col-12 -->
+                </div><!-- end-row -->
+                        <br class="clear">
                 <!--
                 <div class="row">
                     <div class="çol-12">
@@ -1230,6 +1234,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
