--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -93,12 +93,16 @@
 						<img class="logo" src="img/flexy-logo.png">
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-			    <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-				    <hgroup>  
-					    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
-					    <h2 class="heading"><strong>StarTrackr!</strong></h2>
-				    </hgroup>
-			    </header>
+			    <div class="row">
+                    <div class="col-12">        
+				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+				            <hgroup>  
+					            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
+					            <h2 class="heading"><strong>StarTrackr!</strong></h2>
+				            </hgroup>
+			            </header>
+			        </div><!-- end-col-12 -->
+                </div><!-- end-row -->
 				<!--close top section - content area starts -->
                 <div class="data" id="html5-ch1-7content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2>
