--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -90,7 +90,7 @@
 				        </header>
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
-                        <br class="clear">
+                <br class="clear">
                 <!--
                 <div class="row">
                     <div class="çol-12">
@@ -100,11 +100,11 @@
                 <div data-role="page" data-overlay-theme="e">
                     <!-- HEADER -->
 
-                <div id="container-1">	        
+                    <div id="container-1">	        
                 
                     <header id="main-header"> 
-                        <img src="images/flexy-logo.png">                   
-                        <!-- w3-content defines a container for fixed size centered content, 
+                     <!--   <img src="images/flexy-logo.png">                   
+                         w3-content defines a container for fixed size centered content, 
                         and is wrapped around the whole page content, except for the footer in this example -->       
                         <div class="w3-light-grey">          
                             <div id="hnav">
@@ -1234,6 +1234,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
