--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -15,6 +15,7 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
         <!-- Viewport for responsive web design -->
+		<link rel="stylesheet" href="CSS/squaretabs.css">
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
@@ -1234,6 +1235,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
