--- a/index2.html
+++ b/index2.html
@@ -395,11 +395,7 @@
                     <p>&copy; Kite-It.</p>
                 </div><!-- end .row -->
             </div><!-- end col-12 -->
-		</div><!-- end container -->
-    </div><!-- end wrapper -->
-</body><!-- end body  -->   
-</html>
-    <div class="wrapper">
+		
 		<div class="row">
                 <div class="col-12">
                     <nav role="navigation" id="nav">
@@ -463,7 +459,7 @@
 			</div>
 		</div>
                 <br class="clear">
-		<div id="content">
+		<!--<div id="content">-->
                 <div class="col-12"> <!-- close top section - content area starts -->
                     <div id="hnav">
                         <ul>
@@ -727,7 +723,7 @@
 		</div><!-- end wrapper -->
     </body><!-- end body  -->
 			
-					</div><!-- end-content -->
+</html><!-- end-content -->
                         
 
 
