--- a/index[1].html
+++ b/index[1].html
@@ -812,16 +812,16 @@
                 <script src="../orris0/swiper-bundle.min.js"></script>
                 <script src="../orris0/validate.js"></script>
                 <!--jQuery JS-->
-                <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+                <link rel="stylesheet" href="CSS/base.css" type="text/css" media="screen" charset="utf-8" />
                 <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-                <script type="text/javascript" src="./js/scripts.js"></script>
+                <script type="text/javascript" src="js/scripts.js"></script>
 			    <script src="jquery.innerfade.js" type="text/javascript" ></script>
-		        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		        <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
-		        <script type="text/javascript" src="./js/scripts.js"></script>
+		        <script type="text/javascript" src="scripts.js"></script>
 		        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-                <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+                <script type="text/javascript" src="jquery.easing.1.3.js"></script>
                 <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 		        <script src="jquery.innerfade.js" type="text/javascript" ></script>
 	            <script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
@@ -832,8 +832,8 @@
 			</div><!-- end-container -->
 		</div><!-- end wrapper -->
     </body><!-- end body  -->
-
-</html>
+			
+</html><!-- end-content -->
 
 <!-- View in Browser --       
 <div class="youtube-tutorial">
