--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
+  
+		<base href="https://orris0.github.io/orris0/index.html#" target="_blank">
+
+
 
 
 		<link rel="stylesheet" href="../../css/base.css" media="screen">	
@@ -92,6 +96,8 @@ progress{
         <![endif]-->
     </head>
     <body>
+		<img src="images/stickman.gif" width="24" height="39" alt="Stickman">
+        <a href="tags/tag_base.asp">Practical HTML5 Projects for fun and Profit!</a>
 		<div class="wrapper">
 			<div class="data" id="container">
 				<div class="row">
