--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ progress{
                     <div class="col-12">
 				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
-						        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading"><strong>StarTrackr!</strong></h2>
+						        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
+						        <h2 class="heading"><strong>Award winning accommodation, self catering or bed and breakfast</strong></h2>
 					        </hgroup>
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
@@ -167,7 +167,7 @@ progress{
                             <div id="banner">
                                 <div id="banner-wrapper">
                                     <h2 class="dark" id="html5-ch1-7h2"> </h2> 
-							        <!-- <p id="no-script">>Award winning accommodation, self catering or bed and breakfast</p> --> 
+							        <!-- <p id="no-script">Award winning accommodation, self catering or bed and breakfast</p> --> 
                                 </div>
 					        </div>
 				        </div>
