--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
   
-		<base href="https://orris0.github.io/orris0/index.html#" target="_blank">
+		<base href="https://orris0.github.io/orris0" target="_blank">
 
 
 
