--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ progress{
         <![endif]-->
     </head>
     <body>
-		<img src="images/stickman.gif" width="24" height="39" alt="Stickman">
-        <a href="tags/tag_base.asp">Practical HTML5 Projects for fun and Profit!</a>
+		<img src="App-img.png" width="24" height="39" alt="Stickman">
+        <a https://orris0.github.io/orris0/index.html">Practical HTML5 Projects for fun and Profit!</a>
 		<div class="wrapper">
 			<div class="data" id="container">
 				<div class="row">
