--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ progress{
 		        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
 		        <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
-		        <script type="text/javascript" src="./js/scripts.js"></script>
+		        <script type="text/javascript" src="js/scripts.js"></script>
 		        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
                 <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
                 <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
