--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 
 
-		<link rel="stylesheet" href="../../css/base.css" media="screen">	
+		<link rel="stylesheet" href="css/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
-        <script src="../../lib/jquery-1.7.1.min.js"></script>
+        
         <script src="jquery.easing.1.3.js"></script>
         <script src="script.js"></script>
 
