--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ progress{
 								<li><a href="./creating-a-website.html">Create-a-website</a></li>
                             </ul>
                         </nav>
-					    <img class="logo" src="img/flexy-logo.png">
+					    <img class="logo" src="./img/flexy-logo.png">
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				<!--
