--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
   
-		<link rel="stylesheet" href="css/base.css" media="screen">	
+		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
         
         <script src="jquery.easing.1.3.js"></script>
