--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
-  
 		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
-        
         <script src="jquery.easing.1.3.js"></script>
         <script src="script.js"></script>
 
-
+		<link rel="stylesheet" href="CSS/lightbox.css">
+		
 
 
 		
@@ -44,12 +43,6 @@
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
         <!-- Font Awesome Icons -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-       <style>
-
-progress{
-  width: 600px;
-}
-	   </style>
 		<!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
