--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			        
                     <div id="photos">
 						<h2>Celebrity Photos</h2>
-                        <img alt="Glendatronix" class="show" src="./images/glenda_200.jpg" />
+                        <img alt="Glendatronix" class="show" src="./jQuery-novice-to-ninja/tree/master/images/glenda_200.jpg" />
                         <img alt="Darth Fader" src="./images/fader_200.jpg" />
                         <img alt="Beau Dandy" src="./images/beau_200.jpg" />
                         <img alt="Johnny Stardust" src="./images/johnny_200.jpg" />
